<?xml version="1.0"?>
<package>
  <name>mwm</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="todo@tue.nl">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geolib2</build_depend>
  <run_depend>geolib2</run_depend>

  <build_depend>rgbd</build_depend>
  <run_depend>rgbd</run_depend>

</package>
